--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -74,6 +74,23 @@ section h3 {
   margin-bottom: 8px;
 }
 
+.participants-list {
+  margin-top: 10px;
+  padding-left: 20px;
+}
+
+.participants-list li {
+  color: #555;
+  font-size: 0.9em;
+  margin-bottom: 3px;
+}
+
+.participants-header {
+  color: #666;
+  font-weight: bold;
+  margin-top: 10px;
+}
+
 .form-group {
   margin-bottom: 15px;
 }
